<resources>
    <string name="app_name">StoryApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="nama">Name</string>
    <string name="register">Register</string>
    <string name="succes_signup">Success Create New Account. Thank You!</string>
    <string name="logout">Logout</string>
    <string name="deskripsi_gambar">Deskripsi Gambar</string>
    <string name="description">Description</string>
    <string name="galery">Galery</string>
    <string name="upload">Upload</string>
    <string name="add_story">Add Story</string>
    <string name="network_unavailable">Network Unavailable</string>
    <string name="alert_password">This Field fill min 8 character</string>
    <string name="alert_invalid_email">Email Invalid</string>
    <string name="or">Or</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="title_login_page">Selamat Datang di StoryApp</string>
    <string name="message_login_page">Ceritakan semuanya dalam StoryApp</string>
    <string name="title_signup_page">Daftar Yuk sebelum bercerita</string>
    <string name="name">Nama</string>
    <string name="name_logo">StoryApp</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="timeout">Timesout</string>
    <string name="retry">RETRY</string>
    <string name="posted_by">Posted By</string>
    <string name="createdAt">Created At</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="maps">Maps</string>
    <string name="normal_map">Normal</string>
    <string name="satellite_map">Satellite</string>
    <string name="terrain_map">Terrain</string>
    <string name="hybrid_map">Hybrid</string>
</resources>